--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,8 +43,8 @@ $font-size: 14px;
   z-index: 2;
   overflow: hidden;
   box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
-  background: rgba(0, 0, 0, .5);
-  border-radius: 20px;
+  background: rgb(0, 142, 255);
+  border-radius: 10px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -94,7 +94,7 @@ $font-size: 14px;
     clear: both;
     float: left;
     padding: 6px 10px 7px;
-    border-radius: 10px 10px 10px 0;
+    border-radius: 5px 5px 5px 0  ;
     background: rgba(0, 0, 0, .3);
     margin: 8px 0;
     font-size: $font-size + 1px;
