--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,7 +44,7 @@ $font-size: 14px;
   overflow: hidden;
   box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
   background: rgb(0, 142, 255);
-  border-radius: 10px;
+  border-radius: 0 10px 0 0;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
