--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,9 +37,10 @@ $font-size: 14px;
 /*--------------------Chat--------------------*/
 
 .chat {
-  width: 400px;
-  height: 80vh;
-  max-height: 500px;
+  min-width: 320px;
+  min-height: 568px;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   overflow: hidden;
   box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
@@ -198,7 +199,6 @@ $font-size: 14px;
   padding: 10px;
   position: relative;
   & .message-input {
-    background: none;
     border: none;
     outline: none!important;
     resize: none;
@@ -206,8 +206,9 @@ $font-size: 14px;
     font-size: $font-size + 1px;
     height: 25px;
     margin: 0;
-    padding-right: 20px;
-    width: 265px;
+    width: 80%;
+    background: rgba(0, 0, 0, 0.15);
+    overflow: auto;
   }
   textarea:focus:-webkit-placeholder {
     color: transparent;
