--- a/tab/index.css
+++ b/tab/index.css
@@ -1,37 +1,3 @@
-.side-bar-content {
-    padding-left: 0;
-    margin-bottom: 20px
-}
-
-.side-bar-item {
-    position: relative;
-    display: block;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    height: 70px;
-    
-}
-
-.side-bar-item:first-child {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-}
-
-.side-bar-item:last-child {
-    margin-bottom: 0;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-}
-
-.side-bar-item.active,
-.side-bar-item.active:focus,
-.side-bar-item.active:hover {
-    z-index: 2;
-    color: #fff;
-    background-color: #337ab7;
-    border-color: #337ab7;
-}
-
 .box {
     z-index: 10;
     background-color: #008eff;
@@ -40,23 +6,18 @@
 }
 
 .side-bar {
-    width: 100px;
+    float: left;
+    width: 20%;
     height: 100%;
     background: rgba(0, 0, 0, 0.3)
 }
 
-.side-bar .side-bar-content {
-    margin-bottom: 0;
-}
-
-
-.side-bar .side-bar-content>.active {
-    background-color: #5A55A3;
-    background-image: #5A55A3;
+.side-bar-item.active {
+    background: #1b9aff;
     color: #ffffff;
 }
 
-.side-bar .side-bar-content>.active:after {
+.side-bar-item.active:after {
     content: '';
     position: absolute;
     left: 100%;
@@ -65,27 +26,69 @@
     border-left: 0;
     border-bottom: 13px solid transparent;
     border-top: 13px solid transparent;
-    border-left: 10px solid #5A55A3;
+    border-left: 10px solid #1b9aff;
 }
 
-.tabe-box .tabe:not(.active) {
+.side-bar-item {
+    position: relative;
+    display: block;
+    border-bottom: 1px solid #ddd;
+    height: 70px;
+}
+
+.tabe:not(.active) {
     display: none;
 }
 
-.side-bar, .tabe-box {
-    display: inline-block;
-    box-sizing: border-box;
-}
-
 .tabe-box {
-    width: 300px;
+    float: right;
+    width: 80%;
     height: 100%;
     margin: 0;
-    padding: 0 5px;
-    
 }
 
 .tabe {
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     height: 100%;
+    padding-left: 10px;
+}
+
+.side-bar-item .icon {
+    width: 50px;
+    height: 50px;
+    background-image: url(icons.png);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: 0 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.side-bar-item.user-online i {
+    background-position: 0 0;
+}
+
+.side-bar-item.waiting-board i {
+    background-position: 0 -50px;
+}
+
+.side-bar-item.playing-board i {
+    background-position: 0 -100px;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 1px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
