--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,6 +61,7 @@ $font-size: 14px;
   color: #fff;
   text-transform: uppercase;
   text-align: center;
+  height: 30px;
   h1,
   h2 {
     font-weight: normal;
