--- a/scss/keyframes.scss
+++ b/scss/keyframes.scss
@@ -48,3 +48,12 @@
         transform: translateY(-10px);
     }
 }
+
+@keyframes loader {
+    0% {
+        -webkit-transform: translateY(0);
+    }
+    100% {
+        -webkit-transform: translateY(-15px);
+    }
+}
