--- a/scss/state.scss
+++ b/scss/state.scss
@@ -1,60 +1,84 @@
-::-webkit-scrollbar {
-    width: 12px;
-}
-
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 1px;
-}
-
-::-webkit-scrollbar-thumb {
-    border-radius: 1px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-}
-
-.box {
+#state {
     z-index: 10;
     background-color: #008eff;
     width: 400px;
     height: 600px;
 }
 
-.side-bar {
+#side-bar {
     float: left;
     width: 60px;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3)
-}
-
-.side-bar-item.active {
-    background: #56b4ff;
-    color: #ffffff;
-}
-
-.side-bar-item.active:after {
-    content: '';
-    position: absolute;
-    left: 100%;
-    top: 50%;
-    margin-top: -13px;
-    border-left: 0;
-    border-bottom: 13px solid transparent;
-    border-top: 13px solid transparent;
-    border-left: 10px solid #56b4ff;
-}
-
-.side-bar-item {
-    position: relative;
-    display: block;
-    border-bottom: 1px solid #ddd;
-    height: 70px;
+    background: rgba(0, 0, 0, 0.3);
+    .item {
+        position: relative;
+        display: block;
+        border-bottom: 1px solid #ddd;
+        height: 70px;
+        &.active {
+            background: #56b4ff;
+            color: #ffffff;
+        }
+        &.active:after {
+            content: '';
+            position: absolute;
+            left: 100%;
+            top: 50%;
+            margin-top: -13px;
+            border-left: 0;
+            border-bottom: 13px solid transparent;
+            border-top: 13px solid transparent;
+            border-left: 10px solid #56b4ff;
+        }
+        .icon {
+            width: 50px;
+            height: 50px;
+            background-image: url(icons.png);
+            background-repeat: no-repeat;
+            background-size: auto;
+            background-position: 0 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
+        &.user-online i {
+            background-position: 0 0;
+        }
+        &.waiting-board i {
+            background-position: 0 -50px;
+        }
+        &.playing-board i {
+            background-position: 0 -100px;
+        }
+        .numb {
+            border-radius: 50%;
+            font-size: 15px;
+            padding: 5px;
+            position: absolute;
+            top: 10%;
+            left: 10%;
+            color: black;
+            font-weight: bold;
+        }
+        &.user-online .numb {
+            background-color: red;
+        }
+        &.waiting-board .numb {
+            background-color: yellow;
+        }
+        &.playing-board .numb {
+            background-color: green;
+        }
+    }
 }
 
 .tab:not(.active) {
     display: none;
 }
 
-.tab-box {
+#tab-state {
     float: right;
     width: 80%;
     height: 100%;
@@ -77,57 +101,7 @@
     overflow-x: hidden;
     overflow-y: scroll;
     padding-left: 10px;
-    -moz-box-shadow: inset 0 0 10px #000000;
-    -webkit-box-shadow: inset 0 0 10px #000000;
     box-shadow: inset 0 0 10px #000000;
-}
-
-.side-bar-item .icon {
-    width: 50px;
-    height: 50px;
-    background-image: url(icons.png);
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-position: 0 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.side-bar-item.user-online i {
-    background-position: 0 0;
-}
-
-.side-bar-item.waiting-board i {
-    background-position: 0 -50px;
-}
-
-.side-bar-item.playing-board i {
-    background-position: 0 -100px;
-}
-
-.side-bar-item .numb {
-    border-radius: 50%;
-    font-size: 15px;
-    padding: 5px;
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    color: black;
-    font-weight: bold;
-}
-
-.side-bar-item.user-online .numb {
-    background-color: red;
-}
-
-.side-bar-item.waiting-board .numb {
-    background-color: yellow;
-}
-
-.side-bar-item.playing-board .numb {
-    background-color: green;
 }
 
 .user-online.tab .user {
@@ -184,12 +158,12 @@
 }
 
 .waiting-board.tab .board .user {
-    width:70%;
+    width: 70%;
     overflow-x: auto;
 }
 
 .waiting-board.tab .board .vs {
-    float: right;   
+    float: right;
     vertical-align: middle;
     color: yellow;
 }
@@ -213,16 +187,9 @@
     -webkit-animation-delay: 0.6s;
 }
 
-@-webkit-keyframes loader {
-    0% {
-        -webkit-transform: translateY(0);
-    }
-    100% {
-        -webkit-transform: translateY(-15px);
-    }
-}
-
 .playing-board.tab .board {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
