--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,276 +1,5 @@
-/*--------------------Variable--------------------*/
-
-$font-size: 14px;
-
-/*--------------------Mixins--------------------*/
-
-@mixin center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-@mixin ball {
-  @include center;
-  content: '';
-  display: block;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, .5);
-  z-index: 2;
-  margin-top: 4px;
-  animation: ball .45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-}
-
-
-/*--------------------Body--------------------*/
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-
-/*--------------------Chat--------------------*/
-
-.chat {
-  min-width: 320px;
-  min-height: 568px;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  overflow: hidden;
-  box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
-  background: rgb(0, 142, 255);
-  border-radius: 0 10px 0 0;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-
-
-/*--------------------Chat Title--------------------*/
-
-.chat-title {
-  position: relative;
-  z-index: 2;
-  background: rgba(0, 0, 0, 0.2);
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center;
-  height: 30px;
-  h1,
-  h2 {
-    font-weight: normal;
-    font-size: $font-size;
-    margin: 5px;
-    padding: 0;
-  }
-  h2 {
-    color: rgba(255, 255, 255, .5);
-    font-size: $font-size - 2px;
-    letter-spacing: 1px;
-  }
-}
-
-
-/*--------------------Messages--------------------*/
-
-.messages {
-  flex: 1 1 auto;
-  color: rgba(255, 255, 255, .5);
-  overflow: hidden;
-  position: relative;
-  width: 100%;
-  & .messages-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 101%;
-    width: 100%;
-  }
-  .message {
-    clear: both;
-    float: left;
-    padding: 6px 10px 7px;
-    border-radius: 5px 5px 5px 0;
-    background: rgba(0, 0, 0, .3);
-    margin: 8px 0;
-    font-size: $font-size + 1px;
-    line-height: 1.4;
-    margin-left: 35px;
-    position: relative;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
-    .timestamp {
-      position: absolute;
-      bottom: -15px;
-      font-size: $font-size - 1px;
-      color: rgba(255, 255, 255, .6);
-      width: 100%;
-      padding-right: 15px;
-    }
-    .sender {
-      color: #fff;
-    }
-    &::before {
-      content: '';
-      position: absolute;
-      bottom: -6px;
-      border-top: 6px solid rgba(0, 0, 0, .3);
-      left: 0;
-      border-right: 7px solid transparent;
-    }
-    .avatar {
-      position: absolute;
-      z-index: 1;
-      bottom: -15px;
-      left: -35px;
-      border-radius: 30px;
-      width: 30px;
-      height: 30px;
-      overflow: hidden;
-      margin: 0;
-      padding: 0;
-      border: 2px solid rgba(255, 255, 255, 0.24);
-      img {
-        width: 100%;
-        height: auto;
-      }
-    }
-    &.message-personal {
-      float: right;
-      color: #fff;
-      text-align: right;
-      background: linear-gradient(120deg, #248A52, #257287);
-      border-radius: 10px 10px 0 10px;
-      &::before {
-        left: auto;
-        right: 0;
-        border-right: none;
-        border-left: 5px solid transparent;
-        border-top: 4px solid #257287;
-        bottom: -4px;
-      }
-    }
-    &:last-child {
-      margin-bottom: 30px;
-    }
-    &.new {
-      width: 85%;
-      color: #fff;
-      transform: scale(0);
-      transform-origin: 0 0;
-      animation: bounce 500ms linear both;
-      margin-top: 15px;
-    }
-    &.loading {
-      width: 85px;
-      &::before {
-        @include ball;
-        border: none;
-        animation-delay: .15s;
-      }
-      & span {
-        display: block;
-        font-size: 0;
-        width: 20px;
-        height: 10px;
-        position: relative;
-        &::before {
-          @include ball;
-          margin-left: -7px;
-        }
-        &::after {
-          @include ball;
-          margin-left: 7px;
-          animation-delay: .3s;
-        }
-      }
-    }
-  }
-}
-
-
-/*-------------------- Message Box --------------------*/
-
-.message-box {
-  flex: 0 1 40px;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.3);
-  padding: 10px;
-  position: relative;
-  & .message-input {
-    border: none;
-    outline: none!important;
-    resize: none;
-    color: rgba(255, 255, 255, .7);
-    font-size: $font-size + 1px;
-    height: 25px;
-    margin: 0;
-    width: 80%;
-    background: rgba(0, 0, 0, 0.15);
-    overflow: auto;
-  }
-  textarea:focus:-webkit-placeholder {
-    color: transparent;
-  }
-  & .message-submit {
-    position: absolute;
-    z-index: 1;
-    top: 9px;
-    right: 10px;
-    color: #fff;
-    border: none;
-    background: #248A52;
-    font-size: $font-size;
-    text-transform: uppercase;
-    line-height: 1;
-    padding: 6px 10px;
-    border-radius: 10px;
-    outline: none!important;
-    transition: background .2s ease;
-    &:hover {
-      background: #1D7745;
-    }
-  }
-}
-
-
-/*-------------------- Custom Srollbar--------------------*/
-
-.mCSB_scrollTools {
-  margin: 1px -3px 1px 0;
-  opacity: 0;
-}
-
-.mCSB_inside>.mCSB_container {
-  margin-right: 0px;
-  padding: 0 10px;
-}
-
-.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-  background-color: rgba(0, 0, 0, 0.5)!important;
-}
-
-
-/*--------------------Text Align--------------------*/
-
-.text-align-left {
-  text-align: left;
-}
-
-.text-align-center {
-  text-align: center;
-}
-
-.text-align-right {
-  text-align: right;
-}
-
-
-/*--------------------Bounce--------------------*/
-
-@import 'scrollbar'
+@import 'mixins';
+@import 'crome-scroll';
+@import 'state';
+@import 'chat';
+@import 'keyframes';
