--- a/scss/state.scss
+++ b/scss/state.scss
@@ -1,8 +1,13 @@
+/*--------------------State--------------------*/
+
 #state {
     background-color: #008eff;
     width: 400px;
     height: 600px;
 }
+
+
+/*--------------------Side Bar State--------------------*/
 
 #side-bar-state {
     float: left;
@@ -67,7 +72,7 @@
             transform: translate(-50%, -50%);
         }
         .count {
-            border-radius: 50%;
+            @include border-radius(50%);
             font-size: 15px;
             padding: 5px;
             position: absolute;
@@ -78,6 +83,9 @@
         }
     }
 }
+
+
+/*--------------------Tab State--------------------*/
 
 #tab-state {
     float: right;
@@ -113,13 +121,13 @@
         &.user-online .user,
         &.waiting-board .board,
         &.playing-board .board {
-            border-radius: 2px;
+            @include border-radius(2px);
             display: block;
             background: rgba(0, 0, 0, 0.2);
             color: #fff;
             font-weight: bold;
             border: 1px dashed #fff;
-            border-radius: 10px;
+            @include border-radius(10px);
             box-shadow: 0 0 0 4px rgba(10, 20, 0, 0.1), 2px 1px 6px 4px rgba(10, 10, 0, 0.1);
             text-shadow: -1px -1px rgba(20, 10, 0, 0.1);
             font-weight: normal;
@@ -155,7 +163,7 @@
                         height: 10px;
                         margin: auto 5px;
                         background: #fff;
-                        border-radius: 50px;
+                        @include border-radius(50px);
                         animation: loader 0.9s infinite alternate;
                         &:nth-of-type(2) {
                             animation-delay: 0.3s;
@@ -185,13 +193,16 @@
     }
 }
 
+
+/*--------------------User--------------------*/
+
 .user {
     .avatar,
     .name {
         display: inline-block;
     }
     .avatar {
-        border-radius: 30px;
+        @include border-radius(30px);
         width: 30px;
         height: 30px;
         overflow: hidden;
